# dots

./: .gitignore  Cargo.toml  LICENSE  README.md  post.md
.github/workflows/: rust.yml
docs/: 0.bootstrap.js  1.bootstrap.js  CNAME  bootstrap.js  index.html
src/: ffi.rs  game.rs  lib.rs
www/: LICENSE  index.html  index.js  package-lock.json  package.json  pnpm-lock.yaml  webpack.config.js
