[package]
authors = ["deciduously <bendlovy@gmail.com>"]
description = "Casual web game"
license = "MIT"
name = "dots"
version = "0.0.1"
repository = "https://github.com/deciduously/dots.git"
[dependencies]
cfg-if = "0.1.2"
#rand = "0.5"
wasm-bindgen = "0.2"

[dependencies.console_error_panic_hook]
optional = true
version = "0.1.1"

[dependencies.wee_alloc]
optional = true
version = "0.4.1"

[features]
default-features = ["console_error_panic_hook", "wee_alloc"]

[lib]
crate-type = ["cdylib"]
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.1", optional = true }
