[package]
authors = ["deciduously <bendlovy@gmail.com>"]
description = "Casual web game"
license = "MIT"
name = "dots"
version = "0.0.1"
repository = "https://github.com/deciduously/dots.git"

[dependencies]
cfg-if = "0.1.7"
wasm-bindgen = "0.2"

[dependencies.console_error_panic_hook]
optional = true
version = "0.1.6"

[features]
default = ["console_error_panic_hook"]
# default-features = false

[lib]
crate-type = ["cdylib"]
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
debug = false
lto = true
